--- a/GooseScript.csproj
+++ b/GooseScript.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Source\BerEncoder.cs" />
     <Compile Include="Source\GoosePublisher.cs" />
     <Compile Include="Source\GooseSettings.cs" />
+    <Compile Include="Source\NtTimer.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Quality.cs" />
