--- a/GooseScript.csproj
+++ b/GooseScript.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Source\Enums.cs" />
     <Compile Include="Source\GoosePublisher.cs" />
     <Compile Include="Source\GooseSettings.cs" />
+    <Compile Include="Source\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Source\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Source\NtTimer.cs" />
     <Compile Include="Source\Utils.cs" />
     <Compile Include="Source\Program.cs" />
