--- a/GooseScript.csproj
+++ b/GooseScript.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Source\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Source\NtTimer.cs" />
+    <Compile Include="Source\Timer.cs" />
     <Compile Include="Source\Utils.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
