--- a/GooseScript.csproj
+++ b/GooseScript.csproj
@@ -82,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Source\BerEncoder.cs" />
-    <Compile Include="Source\ScriptText.cs" />
+    <Compile Include="Source\ScriptEditor.cs" />
     <Compile Include="Source\Enums.cs" />
     <Compile Include="Source\GoosePublisher.cs" />
     <Compile Include="Source\GooseSettings.cs" />
