--- a/GooseScript.csproj
+++ b/GooseScript.csproj
@@ -113,7 +113,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitignore" />
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Goose.ico" />
