--- a/GooseScript.csproj
+++ b/GooseScript.csproj
@@ -115,13 +115,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
-    <Content Include="Examples\Script_Boolean.txt" />
-    <Content Include="Examples\Script_Dbpos.txt" />
-    <Content Include="Examples\Script_Numeric.txt" />
-    <Content Include="Examples\Script_Octets.txt" />
-    <Content Include="Examples\Script_Quality.txt" />
-    <Content Include="Examples\Script_TwoPublishers.txt" />
-    <Content Include="Examples\Manual.txt" />
+    <None Include="Examples\Script_Boolean.md" />
+    <None Include="Examples\Script_Dbpos.md" />
+    <None Include="Examples\Script_Numeric.md" />
+    <None Include="Examples\Script_Octets.md" />
+    <None Include="Examples\Script_Quality.md" />
+    <None Include="Examples\Script_TwoPublishers.md" />
+    <None Include="Examples\Manual.md" />
     <Content Include="Goose.ico" />
     <None Include="packages.config" />
     <None Include="README.md" />
